Fix legends alignments

--- a/src/modules/Map/InteractiveMap/components/Legend/styles.scss
+++ b/src/modules/Map/InteractiveMap/components/Legend/styles.scss
@@ -6,7 +6,6 @@
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
 
   > .tf-legend {
     border: 0;
@@ -16,6 +15,7 @@
     margin: 0.2rem 0.3rem;
     font-size: 1rem;
     font-weight: 600;
+    text-align: center;
   }
 
   &__list {
